effects/DesktopGrid: use delta, not absolute time for MotionManager

Despite the argument naming, the input for WindowMotionManager::calculate is supposed to be a
delta, not an absolute time. Giving it a delta fixes the PresentWindows in the DesktopGrid.

BUG: 443971


(cherry picked from commit c0cb349cb8a27bc384f9e0b68ed95ebace9faa60)